feat: adicionando scripts de start e poststart dentro do package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start": "npm install",
+    "poststart": "node chatbot.js"
+  },
   "dependencies": {
     "moment-timezone": "^0.5.45",
     "qrcode-terminal": "^0.12.0",
